gitops/environments/dev/apps/dndn-dev-web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dndn-dev-web
  labels:
    app.kubernetes.io/part-of: dndn
