gitops/environments/dev/apps/dndn-dev-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dndn-dev-web
  namespace: dndn-dev-web
  labels:
    app: dndn-dev-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dndn-dev-web
  template:
    metadata:
      labels:
        app: dndn-dev-web
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101      # nginx user
        fsGroup: 101
      containers:
        - name: web
          image: 387721658341.dkr.ecr.ap-northeast-2.amazonaws.com/dndn-dev-web:214718b622a0971b317d1e6a50fa2bf250dcf9f4
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: nginx-conf
          configMap:
            name: dndn-dev-web-nginx
