gitops/environments/dev/apps/dndn-dev-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dndn-dev-web
  namespace: dndn-dev-web
  labels:
    app: dndn-dev-web
spec:
  type: ClusterIP
  selector:
    app: dndn-dev-web
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
